[gd_scene load_steps=5 format=3 uid="uid://dqpcmf42yqw5v"]

[ext_resource type="Script" uid="uid://d1kbgv2kaht0j" path="res://forge_menu.gd" id="1_wmsqf"]
[ext_resource type="PackedScene" uid="uid://y22p8m3u4ba7" path="res://weapon_details.tscn" id="2_ytdjv"]

[sub_resource type="LabelSettings" id="LabelSettings_g0twn"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_7kb3m"]
font_size = 24

[node name="ForgeMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_wmsqf")

[node name="background" type="ColorRect" parent="."]
offset_right = 1279.0
offset_bottom = 802.0
color = Color(0, 0, 0, 0.501961)

[node name="Orange" type="ColorRect" parent="."]
offset_left = 1.0
offset_top = 94.0
offset_right = 395.0
offset_bottom = 801.0
color = Color(0.470061, 0.212267, 0, 1)

[node name="OldDetailBkgd" type="ColorRect" parent="."]
offset_left = 836.0
offset_top = 99.0
offset_right = 1278.0
offset_bottom = 444.0
color = Color(0.470588, 0.211765, 0, 1)

[node name="NewDetailBkgd" type="ColorRect" parent="."]
offset_left = 836.0
offset_top = 449.0
offset_right = 1280.0
offset_bottom = 794.0
color = Color(0.0235294, 0.25098, 0.117647, 1)

[node name="Green" type="ColorRect" parent="."]
offset_left = 395.0
offset_top = 95.0
offset_right = 834.0
offset_bottom = 800.0
color = Color(0.0222005, 0.250018, 0.11724, 1)

[node name="MaterialsTitle" type="Label" parent="."]
offset_left = 552.0
offset_top = 103.0
offset_right = 664.0
offset_bottom = 137.0
text = "Materials"
label_settings = SubResource("LabelSettings_g0twn")

[node name="ArmsTitle" type="Label" parent="."]
offset_left = 159.0
offset_top = 105.0
offset_right = 220.0
offset_bottom = 139.0
text = "Weapons"
label_settings = SubResource("LabelSettings_7kb3m")

[node name="Available" type="Label" parent="."]
offset_left = 637.0
offset_top = 158.0
offset_right = 677.0
offset_bottom = 181.0
text = "Inventory"

[node name="WeaponsContainer" type="ScrollContainer" parent="."]
offset_left = 17.0
offset_top = 163.0
offset_right = 378.0
offset_bottom = 794.0

[node name="VBoxContainer" type="VBoxContainer" parent="WeaponsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryContainer" type="VBoxContainer" parent="."]
offset_left = 403.0
offset_top = 201.0
offset_right = 802.0
offset_bottom = 765.0

[node name="MaterialA" type="HBoxContainer" parent="InventoryContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="InventoryContainer/MaterialA"]
layout_mode = 2
text = "Material A"

[node name="Less" type="Button" parent="InventoryContainer/MaterialA"]
layout_mode = 2
focus_neighbor_right = NodePath("../More")
focus_neighbor_bottom = NodePath("../../MaterialB/Less")
text = "-"

[node name="Current" type="Label" parent="InventoryContainer/MaterialA"]
layout_mode = 2
text = "0"

[node name="More" type="Button" parent="InventoryContainer/MaterialA"]
layout_mode = 2
focus_neighbor_left = NodePath("../Less")
focus_neighbor_bottom = NodePath("../../MaterialB/More")
text = "+"

[node name="Spacer" type="Control" parent="InventoryContainer/MaterialA"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Available" type="Label" parent="InventoryContainer/MaterialA"]
layout_mode = 2
text = "15"

[node name="MaterialB" type="HBoxContainer" parent="InventoryContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="InventoryContainer/MaterialB"]
layout_mode = 2
text = "Material B"

[node name="Less" type="Button" parent="InventoryContainer/MaterialB"]
layout_mode = 2
focus_neighbor_top = NodePath("../../MaterialA/Less")
focus_neighbor_right = NodePath("../More")
focus_neighbor_bottom = NodePath("../../MaterialC/Less")
text = "-"

[node name="Current" type="Label" parent="InventoryContainer/MaterialB"]
layout_mode = 2
text = "0"

[node name="More" type="Button" parent="InventoryContainer/MaterialB"]
layout_mode = 2
focus_neighbor_left = NodePath("../Less")
focus_neighbor_top = NodePath("../../MaterialA/More")
focus_neighbor_bottom = NodePath("../../MaterialC/More")
text = "+"

[node name="Spacer" type="Control" parent="InventoryContainer/MaterialB"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Available" type="Label" parent="InventoryContainer/MaterialB"]
layout_mode = 2
text = "15"

[node name="MaterialC" type="HBoxContainer" parent="InventoryContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="InventoryContainer/MaterialC"]
layout_mode = 2
text = "Material C"

[node name="Less" type="Button" parent="InventoryContainer/MaterialC"]
layout_mode = 2
focus_neighbor_top = NodePath("../../MaterialB/Less")
focus_neighbor_right = NodePath("../More")
focus_neighbor_bottom = NodePath("../../MaterialD/Less")
text = "-"

[node name="Current" type="Label" parent="InventoryContainer/MaterialC"]
layout_mode = 2
text = "0"

[node name="More" type="Button" parent="InventoryContainer/MaterialC"]
layout_mode = 2
focus_neighbor_left = NodePath("../Less")
focus_neighbor_top = NodePath("../../MaterialB/More")
focus_neighbor_bottom = NodePath("../../MaterialD/More")
text = "+"

[node name="Spacer" type="Control" parent="InventoryContainer/MaterialC"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Available" type="Label" parent="InventoryContainer/MaterialC"]
layout_mode = 2
text = "15"

[node name="MaterialD" type="HBoxContainer" parent="InventoryContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="InventoryContainer/MaterialD"]
layout_mode = 2
text = "Material D"

[node name="Less" type="Button" parent="InventoryContainer/MaterialD"]
layout_mode = 2
focus_neighbor_top = NodePath("../../MaterialC/Less")
focus_neighbor_right = NodePath("../More")
focus_neighbor_bottom = NodePath("../../MaterialE/Less")
text = "-"

[node name="Current" type="Label" parent="InventoryContainer/MaterialD"]
layout_mode = 2
text = "0"

[node name="More" type="Button" parent="InventoryContainer/MaterialD"]
layout_mode = 2
focus_neighbor_left = NodePath("../Less")
focus_neighbor_top = NodePath("../../MaterialC/More")
focus_neighbor_bottom = NodePath("../../MaterialE/More")
text = "+"

[node name="Spacer" type="Control" parent="InventoryContainer/MaterialD"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Available" type="Label" parent="InventoryContainer/MaterialD"]
layout_mode = 2
text = "15"

[node name="MaterialE" type="HBoxContainer" parent="InventoryContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="InventoryContainer/MaterialE"]
layout_mode = 2
text = "Material E"

[node name="Less" type="Button" parent="InventoryContainer/MaterialE"]
layout_mode = 2
focus_neighbor_top = NodePath("../../MaterialD/Less")
focus_neighbor_right = NodePath("../More")
focus_neighbor_bottom = NodePath("../../MaterialF/Less")
text = "-"

[node name="Current" type="Label" parent="InventoryContainer/MaterialE"]
layout_mode = 2
text = "0"

[node name="More" type="Button" parent="InventoryContainer/MaterialE"]
layout_mode = 2
focus_neighbor_left = NodePath("../Less")
focus_neighbor_top = NodePath("../../MaterialD/More")
focus_neighbor_bottom = NodePath("../../MaterialF/More")
text = "+"

[node name="Spacer" type="Control" parent="InventoryContainer/MaterialE"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Available" type="Label" parent="InventoryContainer/MaterialE"]
layout_mode = 2
text = "15"

[node name="MaterialF" type="HBoxContainer" parent="InventoryContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="InventoryContainer/MaterialF"]
layout_mode = 2
text = "Material F"

[node name="Less" type="Button" parent="InventoryContainer/MaterialF"]
layout_mode = 2
focus_neighbor_top = NodePath("../../MaterialE/Less")
focus_neighbor_right = NodePath("../More")
focus_neighbor_bottom = NodePath("../../../ForgeButton")
text = "-"

[node name="Current" type="Label" parent="InventoryContainer/MaterialF"]
layout_mode = 2
text = "0"

[node name="More" type="Button" parent="InventoryContainer/MaterialF"]
layout_mode = 2
focus_neighbor_left = NodePath("../Less")
focus_neighbor_top = NodePath("../../MaterialE/More")
focus_neighbor_bottom = NodePath("../../../ForgeButton")
text = "+"

[node name="Spacer" type="Control" parent="InventoryContainer/MaterialF"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Available" type="Label" parent="InventoryContainer/MaterialF"]
layout_mode = 2
text = "15"

[node name="OldWeaponDetails" parent="." instance=ExtResource("2_ytdjv")]
offset_left = 849.0

[node name="NewWeaponDetails" parent="." instance=ExtResource("2_ytdjv")]
offset_left = 849.0
offset_top = 452.0
offset_right = 1277.0
offset_bottom = 795.0

[node name="InventoryButton" type="Button" parent="."]
offset_left = 108.0
offset_top = 32.0
offset_right = 209.0
offset_bottom = 63.0
text = "<- Inventory"

[node name="ForgeButton" type="Button" parent="."]
offset_left = 581.0
offset_top = 689.0
offset_right = 633.0
offset_bottom = 720.0
focus_neighbor_top = NodePath("../InventoryContainer/MaterialF/More")
text = "Forge
"

[connection signal="gui_input" from="InventoryContainer/MaterialA/Less" to="." method="_on_material_gui_input"]
[connection signal="pressed" from="InventoryContainer/MaterialA/Less" to="." method="_on_less_pressed" binds= ["a"]]
[connection signal="gui_input" from="InventoryContainer/MaterialA/More" to="." method="_on_material_gui_input"]
[connection signal="pressed" from="InventoryContainer/MaterialA/More" to="." method="_on_more_pressed" binds= ["a"]]
[connection signal="gui_input" from="InventoryContainer/MaterialB/Less" to="." method="_on_material_gui_input"]
[connection signal="pressed" from="InventoryContainer/MaterialB/Less" to="." method="_on_less_pressed" binds= ["b"]]
[connection signal="gui_input" from="InventoryContainer/MaterialB/More" to="." method="_on_material_gui_input"]
[connection signal="pressed" from="InventoryContainer/MaterialB/More" to="." method="_on_more_pressed" binds= ["b"]]
[connection signal="gui_input" from="InventoryContainer/MaterialC/Less" to="." method="_on_material_gui_input"]
[connection signal="pressed" from="InventoryContainer/MaterialC/Less" to="." method="_on_less_pressed" binds= ["c"]]
[connection signal="gui_input" from="InventoryContainer/MaterialC/More" to="." method="_on_material_gui_input"]
[connection signal="pressed" from="InventoryContainer/MaterialC/More" to="." method="_on_more_pressed" binds= ["c"]]
[connection signal="gui_input" from="InventoryContainer/MaterialD/Less" to="." method="_on_material_gui_input"]
[connection signal="pressed" from="InventoryContainer/MaterialD/Less" to="." method="_on_less_pressed" binds= ["d"]]
[connection signal="gui_input" from="InventoryContainer/MaterialD/More" to="." method="_on_material_gui_input"]
[connection signal="pressed" from="InventoryContainer/MaterialD/More" to="." method="_on_more_pressed" binds= ["d"]]
[connection signal="gui_input" from="InventoryContainer/MaterialE/Less" to="." method="_on_material_gui_input"]
[connection signal="pressed" from="InventoryContainer/MaterialE/Less" to="." method="_on_less_pressed" binds= ["e"]]
[connection signal="gui_input" from="InventoryContainer/MaterialE/More" to="." method="_on_material_gui_input"]
[connection signal="pressed" from="InventoryContainer/MaterialE/More" to="." method="_on_more_pressed" binds= ["e"]]
[connection signal="gui_input" from="InventoryContainer/MaterialF/Less" to="." method="_on_material_gui_input"]
[connection signal="pressed" from="InventoryContainer/MaterialF/Less" to="." method="_on_less_pressed" binds= ["f"]]
[connection signal="gui_input" from="InventoryContainer/MaterialF/More" to="." method="_on_material_gui_input"]
[connection signal="pressed" from="InventoryContainer/MaterialF/More" to="." method="_on_more_pressed" binds= ["f"]]
[connection signal="pressed" from="InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="ForgeButton" to="." method="_on_forge_button_pressed"]
